--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Backend
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gamezone_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/gamezone_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Mysql1234!
+spring.datasource.password=pass@word1
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
